# gitfix

./: README.md  pyproject.toml
gitfix/: main.py  rag.py  schemas.py  system_prompt.txt  user_prompt.txt
scripts/: output.sh
