[tool.poetry]
name = "gitfix"
version = "0.1.0"
description = ""
authors = ["Devansh Singh <devanshamity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
chromadb = "^0.5.3"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
pydantic = "^2.8.2"
simple-term-menu = "^1.6.4"
pygments = "^2.18.0"

[tool.poetry.scripts]
gitfix = "gitfix.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
